generate website with liquid and markdown

--- a/website/vmail-template.html
+++ b/website/vmail-template.html
@@ -11,12 +11,7 @@
   <body>
     <div class="container_12">
       <div class="grid_10 alpha" id="main">
-        <h1>Vmail</h1>
-
-<p>Vmail is a Vim interface to Gmail. Here is a screenshot:</p>
-
-<p><img src="images-vmail/1.png"/></p>
-
+        {{content}}
       </div>
       <div class="grid_2 omega">
         
