--- a/website/vmail.html
+++ b/website/vmail.html
@@ -3,10 +3,11 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
       <title>Vmail</title>
-      <link href="stylesheets-vmail/reset.css?1258295275" media="screen" rel="stylesheet" type="text/css" />
-      <link href="stylesheets-vmail/960.css?1258295275" media="screen" rel="stylesheet" type="text/css" />
-      <link href="stylesheets-vmail/text.css?1258295275" media="screen" rel="stylesheet" type="text/css" />
-      <link href="stylesheets-vmail/site.css?1258295275" media="screen" rel="stylesheet" type="text/css" />
+      <link href="stylesheets-vmail/reset.css?1292299846" media="screen" rel="stylesheet" type="text/css" />
+      <link href="stylesheets-vmail/960.css?1292299846" media="screen" rel="stylesheet" type="text/css" />
+      <link href="stylesheets-vmail/text.css?1292299846" media="screen" rel="stylesheet" type="text/css" />
+      <link href="stylesheets-vmail/site.css?1292299846" media="screen" rel="stylesheet" type="text/css" />
+      <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script><script type="text/javascript">stLight.options({publisher:'8579b5f8-0860-4ea6-9ef1-6f0f58359a99'});</script>
   </head>
   <body>
     <div class="container_12">
@@ -21,6 +22,11 @@
       <div class="grid_2 omega">
         
           <div class="sidebar">
+
+            <h4>share this</h4>
+
+<span class="st_twitter_large" displayText="Tweet"></span><span class="st_facebook_large" displayText="Facebook"></span><span class="st_ybuzz_large" displayText="Yahoo! Buzz"></span><span class="st_gbuzz_large" displayText="Google Buzz"></span><span class="st_email_large" displayText="Email"></span><span class="st_sharethis_large" displayText="ShareThis"></span>
+
             <h4>links</h4>
             <ul>
               <li><a href="https://github.com/danchoi/vmail">github repo</a></li>
