lightbox for screens on vmail webpage

--- a/website/vmail-template.html
+++ b/website/vmail-template.html
@@ -8,6 +8,11 @@
       <link href="stylesheets-vmail/text.css?{{timestamp}}" media="screen" rel="stylesheet" type="text/css" />
       <link href="stylesheets-vmail/site.css?{{timestamp}}" media="screen" rel="stylesheet" type="text/css" />
       <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script><script type="text/javascript">stLight.options({publisher:'8579b5f8-0860-4ea6-9ef1-6f0f58359a99'});</script>
+      <script type="text/javascript" src="lightbox2/js/prototype.js"></script>
+      <script type="text/javascript" src="lightbox2/js/scriptaculous.js?load=effects,builder"></script>
+      <script type="text/javascript" src="lightbox2/js/lightbox.js"></script>
+      <link rel="stylesheet" href="lightbox2/css/lightbox.css" type="text/css" media="screen" />
+
   </head>
   <body>
     <div class="container_12">
