--- a/website/vmail.html
+++ b/website/vmail.html
@@ -3,20 +3,27 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
       <title>Vmail</title>
-      <link href="stylesheets-vmail/reset.css?1292299846" media="screen" rel="stylesheet" type="text/css" />
-      <link href="stylesheets-vmail/960.css?1292299846" media="screen" rel="stylesheet" type="text/css" />
-      <link href="stylesheets-vmail/text.css?1292299846" media="screen" rel="stylesheet" type="text/css" />
-      <link href="stylesheets-vmail/site.css?1292299846" media="screen" rel="stylesheet" type="text/css" />
+      <link href="stylesheets-vmail/reset.css?1292335140" media="screen" rel="stylesheet" type="text/css" />
+      <link href="stylesheets-vmail/960.css?1292335140" media="screen" rel="stylesheet" type="text/css" />
+      <link href="stylesheets-vmail/text.css?1292335140" media="screen" rel="stylesheet" type="text/css" />
+      <link href="stylesheets-vmail/site.css?1292335140" media="screen" rel="stylesheet" type="text/css" />
       <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script><script type="text/javascript">stLight.options({publisher:'8579b5f8-0860-4ea6-9ef1-6f0f58359a99'});</script>
+      <script type="text/javascript" src="lightbox2/js/prototype.js"></script>
+      <script type="text/javascript" src="lightbox2/js/scriptaculous.js?load=effects,builder"></script>
+      <script type="text/javascript" src="lightbox2/js/lightbox.js"></script>
+      <link rel="stylesheet" href="lightbox2/css/lightbox.css" type="text/css" media="screen" />
+
   </head>
   <body>
     <div class="container_12">
       <div class="grid_10 alpha" id="main">
         <h1>Vmail</h1>
 
-<p>Vmail is a Vim interface to Gmail. Here is a screenshot:</p>
+<p>Vmail is a Vim interface to Gmail. Here are some screenshots:</p>
 
-<p><img src="images-vmail/1.png"/></p>
+<p><a href="images-vmail/1.png" rel="lightbox[screens]"><img src="images-vmail/1.png" /></a>
+<a href="images-vmail/autocomplete.png" rel="lightbox[screens]"><img src="images-vmail/autocomplete.png" /></a>
+<a href="images-vmail/attach.png" rel="lightbox[screens]"><img src="images-vmail/attach.png" /></a></p>
 
       </div>
       <div class="grid_2 omega">
