thumb images, more copy

--- a/website/vmail.html
+++ b/website/vmail.html
@@ -3,10 +3,10 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
       <title>Vmail</title>
-      <link href="stylesheets-vmail/reset.css?1292337765" media="screen" rel="stylesheet" type="text/css" />
-      <link href="stylesheets-vmail/960.css?1292337765" media="screen" rel="stylesheet" type="text/css" />
-      <link href="stylesheets-vmail/text.css?1292337765" media="screen" rel="stylesheet" type="text/css" />
-      <link href="stylesheets-vmail/site.css?1292337765" media="screen" rel="stylesheet" type="text/css" />
+      <link href="stylesheets-vmail/reset.css?1292338432" media="screen" rel="stylesheet" type="text/css" />
+      <link href="stylesheets-vmail/960.css?1292338432" media="screen" rel="stylesheet" type="text/css" />
+      <link href="stylesheets-vmail/text.css?1292338432" media="screen" rel="stylesheet" type="text/css" />
+      <link href="stylesheets-vmail/site.css?1292338432" media="screen" rel="stylesheet" type="text/css" />
       <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script><script type="text/javascript">stLight.options({publisher:'8579b5f8-0860-4ea6-9ef1-6f0f58359a99'});</script>
       <script type="text/javascript" src="lightbox2/js/prototype.js"></script>
       <script type="text/javascript" src="lightbox2/js/scriptaculous.js?load=effects,builder"></script>
@@ -21,21 +21,22 @@
 
 <p>vmail is a Vim interface to Gmail. Here are some screenshots:</p>
 
-<p><a href="images-vmail/1.png" rel="lightbox[screens]"><img src="images-vmail/1.png" /></a>
-<a href="images-vmail/autocomplete.png" rel="lightbox[screens]"><img src="images-vmail/autocomplete.png" /></a>
-<a href="images-vmail/attach.png" rel="lightbox[screens]"><img src="images-vmail/attach.png" /></a></p>
+<p><a href="images-vmail/1.png" rel="lightbox[screens]"><img src="images-vmail/1-small.png" /></a>
+<a href="images-vmail/autocomplete.png" rel="lightbox[screens]"><img src="images-vmail/autocomplete-small.png" /></a>
+<a href="images-vmail/attach.png" rel="lightbox[screens]"><img src="images-vmail/attach-small.png" /></a></p>
 
-<p>Why vmail? Because every minute you spend fiddling around in a web browser is a
+<p>Why vmail? Because every minute you spend fumbling around in a web browser is a
 minute you're not experiencing the Zen of using a real text editor and staying
 close to the Unix command line.</p>
 
 <h2>Prerequisites</h2>
 
 <ul>
+<li>a Gmail account</li>
 <li>a relatively recent version of Vim (vmail is developed against Vim 7.3)</li>
 <li>Ruby (vmail is developed using Ruby 1.9.2)</li>
 <li>RubyGems (if Ruby version is older than 1.9)</li>
-<li>the <code>lynx</code> text-based web browser is required to view HTML mail parts in vmail</li>
+<li>the <code>lynx</code> text-only-mode web browser is required to view HTML mail parts in vmail</li>
 </ul>
 
 
