--- a/website/vmail.html
+++ b/website/vmail.html
@@ -3,10 +3,10 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
       <title>Vmail</title>
-      <link href="stylesheets-vmail/reset.css?1292338432" media="screen" rel="stylesheet" type="text/css" />
-      <link href="stylesheets-vmail/960.css?1292338432" media="screen" rel="stylesheet" type="text/css" />
-      <link href="stylesheets-vmail/text.css?1292338432" media="screen" rel="stylesheet" type="text/css" />
-      <link href="stylesheets-vmail/site.css?1292338432" media="screen" rel="stylesheet" type="text/css" />
+      <link href="stylesheets-vmail/reset.css?1292342357" media="screen" rel="stylesheet" type="text/css" />
+      <link href="stylesheets-vmail/960.css?1292342357" media="screen" rel="stylesheet" type="text/css" />
+      <link href="stylesheets-vmail/text.css?1292342357" media="screen" rel="stylesheet" type="text/css" />
+      <link href="stylesheets-vmail/site.css?1292342357" media="screen" rel="stylesheet" type="text/css" />
       <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script><script type="text/javascript">stLight.options({publisher:'8579b5f8-0860-4ea6-9ef1-6f0f58359a99'});</script>
       <script type="text/javascript" src="lightbox2/js/prototype.js"></script>
       <script type="text/javascript" src="lightbox2/js/scriptaculous.js?load=effects,builder"></script>
@@ -47,13 +47,13 @@ close to the Unix command line.</p>
 <pre><code>gem install vmail
 </code></pre>
 
-<h2>Configuration File</h2>
+<h2>Configuration file</h2>
 
-<p>To run vmail, create a yaml file called .vmailrc and save it either in the
+<p>To run vmail, create a yaml file called <code>.vmailrc</code> and save it either in the
 current directory (the directory from which you launch vmail) or in your home
 directory.</p>
 
-<p>This file should look something like this. Substitute your own values.</p>
+<p>The <code>.vmailrc</code> file should look something like this. Substitute your own values.</p>
 
 <pre><code>username: dhchoi@gmail.com
 password: password
@@ -69,14 +69,105 @@ signature: |
 saved in the file. In that case, you'll prompted for the password each time you
 start vmail.</p>
 
-<h1>Contacts Autocompletion</h1>
+<h2>Contacts autocompletion</h2>
 
 <p>vmail uses vim autocompletion to help you auto-complete email addresses.
-To use this feature, generate a vim-contacts.txt file in the current or
+To use this feature, generate a <code>vmail-contacts.txt</code> file in the current or
 home directory. This is a simple list of your email contacts.
-Invoking vmail with the -g option generates this file for you by
+Invoking vmail with the <code>-g</code> option generates this file for you by
 collecting all the recipients and cc's from your last 500 sent
-emails. You can adjust this number by using -g with a number argument.</p>
+emails. You can adjust this number by using <code>-g</code> with a number argument.</p>
+
+<p>After vmail generates this file for you, you can edit it however and whenever
+you want, as long as there is one address per line.</p>
+
+<h2>Starting vmail</h2>
+
+<p>Once you've created the configuration file and (optionally) the contacts file,
+you can start vmail with</p>
+
+<pre><code>vmail
+</code></pre>
+
+<p>This opens the vmail/vim interface and shows you the last 100 messages in your
+Gmail inbox.</p>
+
+<p>You can have vmail show messages from any other mailbox (a.k.a. label) on
+startup by passing in the mailbox name as an argument:</p>
+
+<pre><code>vmail starred
+</code></pre>
+
+<p>You can also pass in search parameters:</p>
+
+<pre><code>vmail important from barackobama@whitehouse.gov
+</code></pre>
+
+<p>On startup, vmail loads 100 messages by default. You can increase or decrease
+this number by passing in a number after the mailbox name:</p>
+
+<pre><code>vmail inbox 700 subject unix
+</code></pre>
+
+<h2>Viewing messages</h2>
+
+<p>The first screen vmail shows you is a list of messages. You can view a message
+by moving the cursor line to it and pressing ENTER. This will split the screen
+and show the message content in the bottom pane.</p>
+
+<p>To full-screen the message, press SPACE when the cursor is the message window.
+To go back to the split view, press ENTER.</p>
+
+<p>You can full-screen the list window by pressing SPACE while the cursor is in it.</p>
+
+<p>vmail loads a certain number messages at a time, starting with the most recent.
+If there are more messages that vmail hasn't loaded, you'll see a line at the
+top of the list that looks something like this:</p>
+
+<pre><code>&gt; Load 100 more messages. 156 remaining.
+</code></pre>
+
+<p>Put the cursor on this line and press ENTER to load more of these messages.</p>
+
+<p>Unread messages are marked with a <code>[+]</code> symbol.</p>
+
+<h2>Starring, deleting, archiving</h2>
+
+<p>To star a message, put the cursor on it and type <code>,*</code> or alternatively <code>s</code>.
+Starring a message copies it to the <code>starred</code> mailbox.  Starred messages are
+marked with a <code>[*]</code> symbol and color-highlighted.</p>
+
+<p>To delete a message, put the cursor on it and type <code>,#</code> or alternatively <code>,d</code>.
+Deleting a message puts it in the <code>trash</code> mailbox. Deleting a message from the
+<code>trash</code> mailbox deletes it permanently.</p>
+
+<p>To archive a message, put the cursor on it and type <code>,e</code>.  Archiving a message
+moves it to the <code>all</code> mailbox.</p>
+
+<h2>Switching mailboxes, moving messages, copying messages to another mailbox</h2>
+
+<p>To switch mailboxes, type <code>,m</code>. You'll see an autocomplete window appear at the top.
+The standard vim autocomplete keystrokes apply:</p>
+
+<ul>
+<li><code>C-p</code> and <code>C-n</code> move you up and down the match list</li>
+<li><code>C-e</code> closes the match list and lets you continue typing</li>
+<li><code>C-u</code>: when the match list is active, cycles forward through the match list and what you've typed so far; when the match list is inactive, erases what you've typed.</li>
+<li><code>C-x C-u</code> finds matches for what you've typed so far (when the match list window is closed)</li>
+<li><code>C-y</code> selects the highlighted match without triggering ENTER</li>
+<li>ENTER selects the highlighted match from the match list</li>
+</ul>
+
+
+<p>Tip: start typing the first 1-3 characters of the mailbox name, then press
+<code>C-u</code> or <code>C-p</code> until you highlight the right match, and finally press ENTER to
+select.</p>
+
+<p>To move a message to another mailbox, put the cursor on the message in the
+message list, and type <code>,b</code>. You'll be prompted to select the target mailbox.</p>
+
+<p>To copy a message to another mailbox, put the cursor on the message in the
+message list, and type <code>,B</code>. You'll be prompted to select the target mailbox.</p>
 
       </div>
       <div class="grid_2 omega">
