--- a/website/vmail.html
+++ b/website/vmail.html
@@ -3,10 +3,10 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
       <title>Vmail</title>
-      <link href="stylesheets-vmail/reset.css?1292347796" media="screen" rel="stylesheet" type="text/css" />
-      <link href="stylesheets-vmail/960.css?1292347796" media="screen" rel="stylesheet" type="text/css" />
-      <link href="stylesheets-vmail/text.css?1292347796" media="screen" rel="stylesheet" type="text/css" />
-      <link href="stylesheets-vmail/site.css?1292347796" media="screen" rel="stylesheet" type="text/css" />
+      <link href="stylesheets-vmail/reset.css?1292348852" media="screen" rel="stylesheet" type="text/css" />
+      <link href="stylesheets-vmail/960.css?1292348852" media="screen" rel="stylesheet" type="text/css" />
+      <link href="stylesheets-vmail/text.css?1292348852" media="screen" rel="stylesheet" type="text/css" />
+      <link href="stylesheets-vmail/site.css?1292348852" media="screen" rel="stylesheet" type="text/css" />
       <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script><script type="text/javascript">stLight.options({publisher:'8579b5f8-0860-4ea6-9ef1-6f0f58359a99'});</script>
       <script type="text/javascript" src="lightbox2/js/prototype.js"></script>
       <script type="text/javascript" src="lightbox2/js/scriptaculous.js?load=effects,builder"></script>
@@ -28,6 +28,8 @@
 <p>Why vmail? Because every minute you spend fumbling around in a web browser is a
 minute you're not experiencing the Zen of using a real text editor and staying
 close to the Unix command line.</p>
+
+<p>The current version is 0.0.8.</p>
 
 <h2>Prerequisites</h2>
 
@@ -119,6 +121,12 @@ and show the message content in the bottom pane.</p>
 To go back to the split view, press ENTER.</p>
 
 <p>You can full-screen the list window by pressing SPACE while the cursor is in it.</p>
+
+<p>In the split view, you can jump between the two panes by just pressing ENTER
+from either window.</p>
+
+<p>In the split view, you can jump between the two panes by just pressing ENTER
+from either window.</p>
 
 <p>vmail loads a certain number messages at a time, starting with the most recent.
 If there are more messages that vmail hasn't loaded, you'll see a line at the
@@ -374,14 +382,15 @@ downloaded from).</p>
 <p>If you find vmail very useful, feel free to drop me a note to say so. If you have
 a bug to report or a good feature to suggest, please file it on the <a href="https://github.com/danchoi/vmail/issues">issue tracker</a>.
 Few things make this software developer happier than knowing that people find my
-software useful and interacting with my users.</p>
+software useful.</p>
 
-<p>If you also want to donate money to financially support development time on the
-vmail project, use this PayPal button:</p>
+<p>Please do not feel obligated to donate money simply because you use vmail. But if you
+want to donate some money to support the independent software developer behind
+vmail, use this PayPal button:</p>
 
 <p><form action="https://www.paypal.com/cgi-bin/webscr" method="post">
 <input type="hidden" name="cmd" value="_s-xclick">
-<input type="hidden" name="hosted_button_id" value="TZBA7QXCBNE6L">
+<input type="hidden" name="hosted_button_id" value="YC3S3D5RFMJSC">
 <input type="image" src="https://www.paypal.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
 <img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1">
 </form></p>
